# visa-booking-agent

./: .gitignore  agent-outline.txt  agent.py  debug_env.py  main.py  pyproject.toml  requirements.txt
agents/: slot_selector.py
booking/: book.py  browser.py  login.py  notify.py  scrape.py  slots.py  utils.py
captcha/: solver.py
config/: settings.py
slot_data/: slots_2025-09-16.csv
slots_history/: slots_history.csv
testing/: debug.html  email_debug.html
visa_booking/: pyvenv.cfg
visa_booking/Scripts/: activate  activate.bat
