[project]
name = "book-visa-01"
version = "0.1.0"
description = "Automated Visa Slot Booking Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai==0.8.3",
    "openai-sdk>=0.1.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "selenium==4.25.0",
    "setuptools==80.9.0",
    "undetected-chromedriver==3.5.5",
]
